see commit body (many fixes)
Signed-off-by: Zoey <zoey@z0ey.de>
Signed-off-by: David <contact@davidcraft.de>

- fix on old mc/java versions
- require MC 1.13+
- fix permissions
- other small fixes
- remove develop update channel
- switch to GitHub actions instead of jenkins
- disable autoupdate by default
- fix double message when trying to stack immune player
- change command syntax slightly
- other small fixes
- dep updates
- remove commons-io dependency
- allow commands from console
- tab completion now requires permissions
- fix missing api-version

Co-Authored-By: David <contact@davidcraft.de>